--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "redirect-ssl": "^3.0.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
